# websockets-postgres-realtime-subscriptions

./: .gitignore  DOCKER.md  README.md  TESTING.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/config/: asgi.py  settings.py  urls.py
backend/sensor_readings/: apps.py  consumers.py  models.py  routing.py  serializers.py  views.py
backend/sensor_readings/management/commands/: listen_sensor_updates.py
backend/sensor_readings/migrations/: 0002_initial.py  0003_create_trigger.py  0004_add_created_updated_fields.py
backend/sensor_readings/sql/: trigger_setup.sql
backend/sensors/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/sensors/migrations/: 0003_create_trigger.py
frontend/: .gitignore  package-lock.json  package.json  remix.config.js  tsconfig.json  vite.config.ts
frontend/app/: root.tsx
frontend/app/hooks/: useWebSocket.ts
frontend/app/routes/: _index.tsx
frontend/public/: styles.css
